# CabbagesECS

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json
include/cabba/ecs/: ComponentPool.h  Constant.h  Entity.h  EntityManager.h  ObserverPointer.h  OwningPointer.h  PolymorphicMap.h  System.h  SystemManager.h  World.h
src/: EntityManager.cpp  EntityPool.cpp  SystemManager.cpp  World.cpp  entity.cpp
tests/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt
tests/benchmark/src/: LoopTesting.cpp  benchmark.cpp
tests/integration/: CMakeLists.txt
tests/integration/src/: main.cpp
tests/unit/: CMakeLists.txt
tests/unit/src/: ComponentUT.cpp  EntityUT.cpp  SystemUT.cpp  UTComponent.cpp  UTEntity.cpp  main.cpp
